--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@tanstack/react-query": "^5.69.0",
 		"@tanstack/react-query-devtools": "^5.69.0",
 		"@tanstack/react-table": "^8.21.2",
+		"@vis.gl/react-google-maps": "^1.5.2",
 		"axios": "^1.8.4",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
