--- a/components.json
+++ b/components.json
@@ -14,7 +14,8 @@
 		"utils": "@/lib/utils",
 		"ui": "@/components/ui",
 		"lib": "@/lib",
-		"hooks": "@/hooks"
+		"hooks": "@/hooks",
+		"pages": "@/pages"
 	},
 	"iconLibrary": "lucide"
 }
