--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"lint:fix": "eslint --fix",
 		"prettier": "prettier --check src/**/*.{ts,tsx,css}",
 		"prettier:fix": "prettier --write src/**/*.{ts,tsx,css}",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"openapi-ts": "openapi-ts"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^4.1.3",
@@ -38,6 +39,7 @@
 		"@radix-ui/react-toggle": "^1.1.2",
 		"@radix-ui/react-toggle-group": "^1.1.2",
 		"@radix-ui/react-tooltip": "^1.1.8",
+		"@tailwindcss/postcss": "^4.0.16",
 		"@tailwindcss/vite": "^4.0.15",
 		"@tanstack/react-query": "^5.69.0",
 		"@tanstack/react-query-devtools": "^5.69.0",
@@ -49,6 +51,7 @@
 		"cmdk": "1.0.0",
 		"date-fns": "^4.1.0",
 		"embla-carousel-react": "^8.5.2",
+		"hls.js": "^1.5.20",
 		"i18next": "^24.2.3",
 		"lodash": "^4.17.21",
 		"lucide-react": "^0.483.0",
@@ -74,6 +77,8 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.21.0",
+		"@hey-api/client-axios": "^0.6.2",
+		"@hey-api/openapi-ts": "^0.64.13",
 		"@trivago/prettier-plugin-sort-imports": "^5.2.2",
 		"@types/i18next": "^13.0.0",
 		"@types/lodash": "^4.17.16",
