--- a/.env.sample
+++ b/.env.sample
@@ -2,4 +2,5 @@ VITE_PORT=3000
 VITE_MODE=development
 VITE_API_URL=http://192.168.1.1:8080
 VITE_BASE_URL = /
+VITE_HSL_STREAM_URL = http://192.168.1.1:8888
 VITE_GOOGLE_MAP_API_KEY = 
