--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
 		"next-themes": "^0.4.6",
 		"numeral": "^2.0.6",
 		"react": "^19.0.0",
-		"react-day-picker": "8.10.1",
+		"react-day-picker": "^9.6.3",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
 		"react-i18next": "^15.4.1",
@@ -82,6 +82,7 @@
 		"@trivago/prettier-plugin-sort-imports": "^5.2.2",
 		"@types/i18next": "^13.0.0",
 		"@types/lodash": "^4.17.16",
+		"@types/moment": "^2.13.0",
 		"@types/node": "^22.13.11",
 		"@types/numeral": "^2.0.5",
 		"@types/react": "^19.0.10",
